--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <div class="bg-container"></div>
 
-    <a href="http://121.189.21.229" class="top-left-logo">
+    <a href="https://council.chungnam.go.kr" class="top-left-logo" target="_blank">
         <img src="mark.png" alt="의회마크" class="logo-mark">
         
         <div class="logo-text-group">
