--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     
     <style>
         :root {
-            --primary-bg: #1a1a1a;
-            --accent-color: #4facfe;
+            --primary-bg: #0d1b3e; 
+            /* 공유해주신 노란색 코드 */
+            --accent-color: #DBAD58;
             --text-white: #ffffff;
             --glass-bg: rgba(30, 30, 30, 0.7);
             --glass-border: rgba(255, 255, 255, 0.15);
@@ -42,11 +43,9 @@
             width: 100%;
             height: 100vh;
             z-index: -1;
-            /* 배경 유지: 밝은 회색 톤 */
-            background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.5)), url('Gemini_Generated_Image_ov40pfov40pfov40.png');
+            background: linear-gradient(to bottom, rgba(13,27,62,0.5), #0d1b3e), url('Gemini_Generated_Image_daeolrdaeolrdaeo.png');
             background-size: cover;
             background-position: center;
-            filter: grayscale(80%);
         }
 
         /* 왼쪽 상단 로고 */
@@ -70,7 +69,7 @@
         }
         
         .top-right-logo img {
-            height: 70px; /* 로고 크기 조정 */
+            height: 70px; 
             width: auto;
         }
 
@@ -86,21 +85,26 @@
             justify-content: center;
         }
 
+        /* [수정] 왼쪽 상단 한글 로고: 밝은 회색(#e0e0e0)으로 변경 */
         .logo-title-kr {
             font-family: 'Gothic A1', sans-serif;
             font-size: 1.6rem;
             font-weight: 900;
-            color: #333333;
+            color: #e0e0e0; 
             line-height: 1.1;
             letter-spacing: -0.5px;
+            text-shadow: 0 2px 5px rgba(0,0,0,0.7);
         }
 
+        /* [수정] 왼쪽 상단 영문 로고: 조금 더 차분한 밝은 회색(#cccccc)으로 변경 */
         .logo-title-en {
             font-size: 0.55rem;
             font-weight: 500;
-            color: #555555;
+            color: #cccccc;
+            opacity: 0.9;
             letter-spacing: 0.5px;
             margin-top: 3px;
+            text-shadow: 0 2px 5px rgba(0,0,0,0.7);
         }
 
         .hero {
@@ -131,7 +135,7 @@
 
         .hero h1 span { 
             color: var(--accent-color);
-            text-shadow: 0 0 20px rgba(79, 172, 254, 0.9);
+            text-shadow: 0 0 20px rgba(219, 173, 88, 0.5);
         }
 
         .enter-card {
@@ -139,31 +143,31 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background: rgba(15, 15, 15, 0.85);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: rgba(20, 50, 100, 0.25);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 20px;
             padding: 50px 80px;
             text-decoration: none;
             color: white;
             transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
             gap: 20px;
             max-width: 90%;
         }
 
         .enter-card:hover {
             transform: translateY(-5px);
-            background: rgba(25, 25, 25, 0.95);
+            background: rgba(20, 50, 100, 0.45);
             border-color: var(--accent-color);
-            box-shadow: 0 0 40px rgba(79, 172, 254, 0.5);
+            box-shadow: 0 0 30px rgba(219, 173, 88, 0.4);
         }
 
         .icon-box {
             font-size: 4rem; 
             color: var(--accent-color);
             margin-bottom: 5px;
-            filter: drop-shadow(0 0 10px rgba(79, 172, 254, 0.6));
+            filter: drop-shadow(0 0 10px rgba(219, 173, 88, 0.5));
         }
 
         .text-box {
@@ -239,7 +243,7 @@
     </a>
 
     <div class="top-right-logo">
-        <img src="image_11.png" alt="도민중심 행동하는 의회">
+        <img src="image_12.png" alt="도민중심 행동하는 의회">
     </div>
 
     <section class="hero">
