--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="naver-site-verification" content="ab273cd2a1526991b9c791c3c202b6b01a4bec86" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>충청남도의회AI의정브레인</title>
     <link rel="icon" href="mark.png" type="image/png">
     <link rel="shortcut icon" href="mark.png" type="image/png">
