--- a/manual.html
+++ b/manual.html
@@ -207,7 +207,7 @@
             <div class="card">
                 <p class="mb-6 text-slate-600">상단 <strong>모델 선택 메뉴</strong>를 클릭하여 의정 활동의 성격에 맞는 AI 보좌관을 호출하세요.</p>
                 <div class="screenshot-container">
-                    <img src="menu.jpg" alt="메뉴 선택 화면">
+                    <img src="menu.png" alt="메뉴 선택 화면">
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-8">
                     <div class="p-4 border border-slate-200 rounded-lg">
