--- a/manual.html
+++ b/manual.html
@@ -141,12 +141,6 @@
     <main class="main-content">
         
         <!-- 섹션 1: 개요 -->
-        <section id="intro" class="mb-20">
-            <div class="flex justify-between items-center mb-10">
-                <h1 class="text-4xl font-bold text-slate-800">01. 시스템 개요</h1>
-                <img src="https://www.council.chungnam.go.kr/images/common/logo.png" alt="충청남도의회 로고" class="h-10 opacity-50">
-            </div>
-            <div class="card">
                 <h3 class="text-2xl font-bold mb-4 text-blue-900">의원님의 의정활동, AI가 보좌합니다.</h3>
                 <p class="text-lg text-slate-600 leading-relaxed mb-6">
                     '충청남도의회 AI 의정브레인'은 수만 페이지의 예산서, 복잡한 자치법규, 방대한 회의록 데이터를 실시간으로 분석합니다. 
@@ -195,7 +189,7 @@
                         <p class="text-sm text-slate-500">배정된 개인 계정을 사용하여 로그인합니다.</p>
                     </div>
                     <div class="screenshot-container">
-                        <img src="main.png" alt="메인 화면">
+                        <img src="https://postfiles.pstatic.net/MjAyNjAxMjZfNTUg/MDAxNzY5MzkyMzMxODM4.ZeDboYwLQTPd6tFDx7PfOnpUc4dn8TUWE0nwSk6QYpYg.W6jyBDugVFpobIa_vXZ6i5pzveB2u74p-cmNLsw_Jskg.PNG/main.PNG?type=w773" alt="메인 화면">
                     </div>
                 </div>
             </div>
@@ -250,7 +244,7 @@
 
                     <div class="lg:w-1/2">
                         <div class="screenshot-container sticky top-10">
-                            <img src="menu.png" alt="메뉴 및 인터페이스 가이드 화면">
+                            <img src="https://postfiles.pstatic.net/MjAyNjAxMjZfMjE4/MDAxNzY5MzkyMzIzODg0.SZcGqlhEmvUCuUgBpuEY4HsPOHMw4DR3RHJeXmGbkM0g.YexmeSQNTrFYAgmQf90pipP6224nmQzlz2CPr8e01YQg.PNG/menu.PNG?type=w773" alt="메뉴 및 인터페이스 가이드 화면">
                             <div class="bg-slate-50 p-4 border-t border-slate-200">
                                 <p class="text-xs text-slate-500 leading-tight text-center">
                                     <i class="fa-solid fa-circle-info mr-1"></i> 
