--- a/manual.html
+++ b/manual.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -137,10 +137,16 @@
         </button>
     </div>
 
-    <!-- 메인 컨텐츠 -->
+<!-- 메인 컨텐츠 -->
     <main class="main-content">
         
         <!-- 섹션 1: 개요 -->
+        <section id="intro" class="mb-20">
+            <div class="flex justify-between items-center mb-10">
+                <h1 class="text-3xl font-bold text-slate-800">01. 시스템 개요</h1>
+                <img src="image_11.png" alt="충청남도의회 로고" class="h-20 opacity-50">
+            </div>
+            <div class="card">
                 <h3 class="text-2xl font-bold mb-4 text-blue-900">의원님의 의정활동, AI가 보좌합니다.</h3>
                 <p class="text-lg text-slate-600 leading-relaxed mb-6">
                     '충청남도의회 AI 의정브레인'은 수만 페이지의 예산서, 복잡한 자치법규, 방대한 회의록 데이터를 실시간으로 분석합니다. 
