--- a/manual.html
+++ b/manual.html
@@ -195,7 +195,7 @@
                         <p class="text-sm text-slate-500">배정된 개인 계정을 사용하여 로그인합니다.</p>
                     </div>
                     <div class="screenshot-container">
-                        <img src="https://postfiles.pstatic.net/MjAyNjAxMjZfNTUg/MDAxNzY5MzkyMzMxODM4.ZeDboYwLQTPd6tFDx7PfOnpUc4dn8TUWE0nwSk6QYpYg.W6jyBDugVFpobIa_vXZ6i5pzveB2u74p-cmNLsw_Jskg.PNG/main.PNG?type=w773" alt="메인 화면">
+                        <img src="main.PNG" alt="메인 화면">
                     </div>
                 </div>
             </div>
@@ -250,7 +250,7 @@
 
                     <div class="lg:w-1/2">
                         <div class="screenshot-container sticky top-10">
-                            <img src="https://postfiles.pstatic.net/MjAyNjAxMjZfMjE4/MDAxNzY5MzkyMzIzODg0.SZcGqlhEmvUCuUgBpuEY4HsPOHMw4DR3RHJeXmGbkM0g.YexmeSQNTrFYAgmQf90pipP6224nmQzlz2CPr8e01YQg.PNG/menu.PNG?type=w773" alt="메뉴 및 인터페이스 가이드 화면">
+                            <img src="menu.png" alt="메뉴 및 인터페이스 가이드 화면">
                             <div class="bg-slate-50 p-4 border-t border-slate-200">
                                 <p class="text-xs text-slate-500 leading-tight text-center">
                                     <i class="fa-solid fa-circle-info mr-1"></i> 
