--- a/manual.html
+++ b/manual.html
@@ -229,7 +229,7 @@
             <div class="card">
                 <h3 class="text-2xl font-bold mb-6 text-blue-900 leading-tight">
                     의원님의 의정활동과 의회사무처의 업무,<br>
-                    <span class="text-blue-600">AI 의정브레인</span>이 보좌합니다.
+                    <span class="text-blue-600">AI 의정브레인</span>이 함께합니다.
                 </h3>
                 <p class="text-lg text-slate-600 leading-relaxed mb-10">
                     '충청남도의회 AI 의정브레인'은 수만 페이지의 예산서, 복잡한 자치법규, 방대한 회의록 데이터를 실시간으로 분석합니다. 단순한 검색을 넘어, 데이터를 분석하고 대안을 제시하는 <strong>의회 전용 지능형 어시스턴트</strong>입니다. 
@@ -393,7 +393,7 @@
                         <div class="space-y-4">
                             <!-- 질문 그룹 1 -->
                             <div class="p-5 bg-blue-50/50 rounded-2xl mb-4 transition-all hover:bg-blue-50">
-                                <p class="text-[10px] font-bold text-blue-500 mb-2 uppercase tracking-wider">포괄적 예산/결산 현황</p>
+                                <p class="text-[10px] font-bold text-blue-500 mb-2 uppercase tracking-wider">예산 및 결산 현황 파악</p>
                                 <div class="space-y-2">
                                     <p class="text-sm font-medium"><span class="text-blue-600 mr-1">Q:</span> "최근 3년간 충청남도의 본예산현황을 일반회계와 특별회계로 구분해서 확인해주고 그래프로 그려줘"</p>
                                     <p class="text-sm font-medium"><span class="text-blue-600 mr-1">Q:</span> "최근 3년간 충청남도의 결산현황을 확인해줘"</p>
@@ -558,7 +558,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="card border-t-8 border-t-amber-500 mb-0">
                     <h4 class="font-bold text-xl mb-6 text-amber-900 flex items-center gap-2">
-                        <i class="fa-solid fa-keyboard"></i> 고성능 질문의 기술 (Prompt)
+                        <i class="fa-solid fa-keyboard"></i> 효과적인 질문의 기술 (Prompt)
                     </h4>
                     <p class="text-slate-600 text-sm mb-6 leading-relaxed">
                         AI는 구체적일수록 정확합니다. <strong>[부서명/사업명/기간]</strong>을 명확히 명시하고, 답변의 <strong>[형식: 표, 리스트, 보고서형]</strong>을 지정하세요.
